# AeroPlygiant

./: .gitignore  CITATION.cff  CMakeLists.txt  Gyer.lyx  LICENSE  Papers.bib  README.md  Refraction.lyx  Refraction_NodeGeometry.ipe  Sylvester.lyx  TODO.md  demoAeroPlygiant.cpp  demoExpAtmosphere.cpp  demoHotRoad.cpp  demoThickPlate.cpp  env.hpp  envActiveVolume.hpp  envIndexVolume.hpp  envPlanet.hpp  geomCylinder.hpp  geomInterval.hpp  hello.cpp  ray.hpp  rayDirChange.hpp  rayNode.hpp  rayPath.hpp  rayPathView.hpp  rayPropagator.hpp  rayStart.hpp  save.hpp  stcopen.hdr  test_.cpp  test_Cylinder.cpp  test_DiffEq.cpp  test_Hessian.cpp  test_IndexVolume.cpp  test_Interval.cpp  test_Path.cpp  test_Propagator.cpp  test_Sylvester.cpp  (+5 more)
data/: uwyoDataPage.txt
demo/: CMakeLists.txt  README.md  _demo.cpp  demoAeroPlygiant.cpp  demoAirSoundingData.cpp  demoAirUWyo.cpp  demoExpAtmosphere.cpp  demoIntegrate.cpp  demoIntegrate.lyx  demoThickPlate.cpp  hello.cpp
doc/: CMakeLists.txt  Doxyfile.in
example/: diffeqSystem.hpp  examp.hpp  exampDiffEqSystem.hpp  indexModel.hpp
include/: _.hpp_  aply.hpp  envActiveVolume.hpp  envAir.hpp  envAirInfo.hpp  envAirProfile.hpp  envAtmosphere.hpp  envAtmosphereParameters.hpp  envIndexVolume.hpp  envModels.hpp  geom.hpp  math.hpp  mathDiffEqSolve.hpp  mathDiffEqSystem.hpp  rayDirChange.hpp  rayNode.hpp  rayPropagator.hpp  rayRefraction.hpp
src/: CMakeLists.txt  envAirInfo.cpp  envAirProfile.cpp  envAtmosphere.cpp  envAtmosphereParameters.cpp  mathDiffEqSolve.cpp  rayRefraction.cpp
test/: CMakeLists.txt  test_.cpp  test_Air.cpp  test_AirInfo.cpp  test_Atmosphere.cpp  test_Cylinder.cpp  test_DiffEq.cpp  test_DiffEqSolve.cpp  test_Hessian.cpp  test_IndexVolume.cpp  test_Interval.cpp  test_Path.cpp  test_Refraction.cpp  test_Sylvester.cpp  test_nextTangentDir.cpp  test_roundTrip.cpp
theory/: Gyer.lyx  Papers.bib  Refraction.lyx  Refraction_InterfaceGeom.ipe  Refraction_NodeGeometry.ipe  Tatum.lyx
